Bug 1683878 - Use a local autorelease pool in gfxMacPlatformFontList::LookupSystemFont because it may be used off-main-thread. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D100341